--- a/configure.in
+++ b/configure.in
@@ -761,16 +761,14 @@ while test $# -gt 0; do
   test -n "$enable_debug_configure" &&
   echo "[DEBUG]: name/Implies $xsrcdir$name/Implies" >&2
 
-  for implies_file in Implies Implies-after; do
-    implies_type=`echo $implies_file | sed s/-/_/`
-    eval ${implies_type}=
-    if test -f $xsrcdir$name/$implies_file; then
+  if test -f $xsrcdir$name/Implies; then
     # Collect more names from the `Implies' file (removing comments).
-      implied_candidate="`sed 's/#.*$//' < $xsrcdir$name/$implies_file`"
+    implied_candidate="`sed 's/#.*$//' < $xsrcdir$name/Implies`"
+    implied=
     for x in $implied_candidate; do
       found=no
       if test -d $xsrcdir$name_base/$x; then
-	  eval "${implies_type}=\"\$${implies_type} \$name_base/\$x\""
+	implied="$implied $name_base/$x";
 	found=yes
       fi
       for d in $add_ons_pfx ''; do
@@ -780,10 +778,10 @@ while test $# -gt 0; do
 	 *) try_srcdir=$srcdir/ ;;
 	esac
 	test -n "$enable_debug_configure" &&
-	   echo "[DEBUG]: $name $implies_file $x try($d) {$try_srcdir}$try" >&2
+	 echo "[DEBUG]: $name implied $x try($d) {$try_srcdir}$try" >&2
 	if test $try != $xsrcdir$name_base/$x && test -d $try_srcdir$try;
 	then
-	    eval "${implies_type}=\"\$${implies_type} \$try\""
+	  implied="$implied $try"
 	  found=yes
 	  case "$sysnames_add_ons" in
 	  *" $d "*) ;;
@@ -792,11 +790,12 @@ while test $# -gt 0; do
 	fi
       done
       if test $found = no; then
-	  AC_MSG_WARN($name/$implies_file specifies nonexistent $x)
+	AC_MSG_WARN($name/Implies specifies nonexistent $x)
       fi
     done
+  else
+    implied=
   fi
-  done
 
   # Add NAME to the list of names.
   names="$names $name"
@@ -813,7 +812,7 @@ changequote([,])dnl
   # configuration components; this ensures that for sysv4, unix/common
   # (implied by unix/sysv/sysv4) comes before unix/sysv (in ostry (here $*)
   # after sysv4).
-  sysnames="`echo $Implies $* $parent $Implies_after`"
+  sysnames="`echo $implied $* $parent`"
   test -n "$sysnames" && set $sysnames
 done
 
