--- a/configure.in
+++ b/configure.in
@@ -2151,6 +2151,7 @@ AC_SUBST(libc_cv_cc_sse4)
 AC_SUBST(libc_cv_cc_avx)
 AC_SUBST(libc_cv_cc_sse2avx)
 AC_SUBST(libc_cv_cc_novzeroupper)
+AC_SUBST(libc_cv_cc_fma)
 AC_SUBST(libc_cv_cc_fma4)
 AC_SUBST(libc_cv_cc_nofma)
 AC_SUBST(libc_cv_as_i686)
