PowerPC: strcasecmp multilib for PowerPC32

--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -3,5 +3,6 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memcpy-power4 memcpy-ppc32 memcmp-power7 memcmp-power4 \
 		   memcmp-ppc32 memset-power7 memset-power6 memset-power4 \
 		   memset-ppc32 strnlen-power7 strnlen-c strlen-power7 \
-		   strlen-ppc32 strnlen-power7 strnlen-c
+		   strlen-ppc32 strnlen-power7 strnlen-c strcasecmp-power7 \
+		   strcasecmp_l-power7
 endif
