--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -4,5 +4,6 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memcmp-ppc32 memset-power7 memset-power6 memset-power4 \
 		   memset-ppc32 strnlen-power7 strnlen-c strlen-power7 \
 		   strlen-ppc32 strnlen-power7 strnlen-c strcasecmp-power7 \
-		   strcasecmp_l-power7 mempcpy-power7 mempcpy-c
+		   strcasecmp_l-power7 mempcpy-power7 mempcpy-c \
+		   memchr-power7 memchr-c
 endif
