--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -5,5 +5,5 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memset-ppc32 strnlen-power7 strnlen-c strlen-power7 \
 		   strlen-ppc32 strnlen-power7 strnlen-c strcasecmp-power7 \
 		   strcasecmp_l-power7 mempcpy-power7 mempcpy-c \
-		   memchr-power7 memchr-c
+		   memchr-power7 memchr-c memrchr-power7 memrchr-c
 endif
