PowerPC: rawmemchr multilib for PowerPC32

--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -6,7 +6,8 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   strlen-ppc32 strnlen-power7 strnlen-c strcasecmp-power7 \
 		   strcasecmp_l-power7 mempcpy-power7 mempcpy-c \
 		   memchr-power7 memchr-c memrchr-power7 memrchr-c \
-		   strncase-power7 strncase_l-power7
+		   strncase-power7 strncase_l-power7 rawmemchr-power7 \
+		   rawmemchr-c
 
 CFLAGS-strncase-power7.c += -mcpu=power7 -funroll-loops
 CFLAGS-strncase_l-power7.c += -mcpu=power7 -funroll-loops
