--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -8,8 +8,10 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memchr-power7 memchr-c memrchr-power7 memrchr-c \
 		   strncase-power7 strncase_l-power7 rawmemchr-power7 \
 		   rawmemchr-c strchrnul-power7 strchrnul-c strchr-power7 \
-		   strchr-ppc32
+		   strchr-ppc32 wcschr-power7 wcschr-power6 wcschr-c
 
 CFLAGS-strncase-power7.c += -mcpu=power7 -funroll-loops
 CFLAGS-strncase_l-power7.c += -mcpu=power7 -funroll-loops
+CFLAGS-wcschr-power7.c += -mcpu=power7
+CFLAGS-wcschr-power6.c += -mcpu=power6
 endif
