PowerPC: isinf/isinff multilib for PowerPC32

--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -1,7 +1,7 @@
 ifeq ($(subdir),math)
 sysdep_routines += s_isnan-power7 s_isnan-power6 s_isnan-power5 s_isnan-ppc32 \
 		   s_isnanf-power7 s_isnanf-power6 s_isnanf-power5 \
-		   s_isnanf-ppc32
+		   s_isnanf-ppc32 s_isinf-power7 s_isinf-c s_isinff-c
 
 libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			s_llrint-power6 s_llrint-power4 s_llrint-c \
@@ -10,7 +10,8 @@ libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			w_sqrtf-power5 w_sqrtf-power4 w_sqrtf-c \
 			s_isnan-power7 s_isnan-power6 s_isnan-power5 \
 			s_isnan-ppc32 s_isnanf-power7 s_isnanf-power6 \
-			s_isnanf-power5 s_isnanf-ppc32
+			s_isnanf-power5 s_isnanf-ppc32 s_isinf-power7 \
+			s_isinf-c s_isinff-c
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
 endif
