--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -14,7 +14,8 @@ libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			s_isnanf-power5 s_isnanf-ppc32 s_isinf-power7 \
 			s_isinf-c s_isinff-c s_finite-power7 s_finite-c \
 			s_finitef-c s_ceil-power5+ s_ceil-ppc32 \
-			s_ceilf-power5+ s_ceilf-ppc32
+			s_ceilf-power5+ s_ceilf-ppc32 s_floor-power5+ \
+			s_floor-ppc32 s_floorf-power5+ s_floorf-ppc32
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
 endif
