--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -2,7 +2,8 @@ ifeq ($(subdir),math)
 sysdep_routines += s_isnan-power7 s_isnan-power6 s_isnan-power5 s_isnan-ppc32 \
 		   s_isnanf-power7 s_isnanf-power6 s_isnanf-power5 \
 		   s_isnanf-ppc32 s_isinf-power7 s_isinf-c s_isinff-c \
-		   s_finite-power7 s_finite-c s_finitef-c
+		   s_finite-power7 s_finite-c s_finitef-c s_copysign-power6 \
+		   s_copysign-ppc32
 
 libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			s_llrint-power6 s_llrint-power4 s_llrint-c \
@@ -18,7 +19,8 @@ libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			s_floor-ppc32 s_floorf-power5+ s_floorf-ppc32 \
 			s_round-power5+ s_round-ppc32 s_roundf-power5+ \
 			s_roundf-ppc32 s_trunc-power5+ s_trunc-ppc32 \
-			s_truncf-power5+ s_truncf-ppc32
+			s_truncf-power5+ s_truncf-ppc32 s_copysign-power6 \
+			s_copysign-ppc32
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
 endif
