--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -3,7 +3,11 @@ sysdep_routines += s_isnan-power7 s_isnan-power6 s_isnan-power5 s_isnan-ppc32 \
 		   s_isnanf-power7 s_isnanf-power6 s_isnanf-power5 \
 		   s_isnanf-ppc32 s_isinf-power7 s_isinf-c s_isinff-c \
 		   s_finite-power7 s_finite-c s_finitef-c s_copysign-power6 \
-		   s_copysign-ppc32
+		   s_copysign-ppc32 s_modf-power5+ s_modf-c s_ceil \
+		   s_ceil-power5+ s_ceil-ppc32 s_floor s_floor-power5+ \
+		   s_floor-ppc32 s_modff-power5+ s_modff-c s_ceilf \
+		   s_ceilf-power5+ s_ceilf-ppc32 s_floorf s_floorf-power5+ \
+		   s_floorf-ppc32
 
 libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			s_llrint-power6 s_llrint-power4 s_llrint-c \
@@ -21,7 +25,9 @@ libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-c \
 			s_roundf-ppc32 s_trunc-power5+ s_trunc-ppc32 \
 			s_truncf-power5+ s_truncf-ppc32 s_copysign-power6 \
 			s_copysign-ppc32 s_lround-power6x s_lround-power5+ \
-			s_lround-ppc32 s_lrint-power6x s_lrint-ppc32
+			s_lround-ppc32 s_lrint-power6x s_lrint-ppc32 \
+			s_modff-power5+ s_modff-c
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
+CFLAGS-s_modf-power5+ = -mcpu=power5+
 endif
