PowerPC: mempcpy multilib for PowerPC32

--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -2,5 +2,5 @@ ifeq ($(subdir),string)
 sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memcpy-power4 memcpy-ppc32 memcmp-power7 memcmp-power4 \
 		   memcmp-ppc32 memset-power7 memset-power6 memset-power4 \
-		   memset-ppc32
+		   memset-ppc32 mempcpy-power7 mempcpy-ppc32
 endif
