--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -5,5 +5,6 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memset-ppc32 mempcpy-power7 mempcpy-ppc32 memchr-power7 \
 		   memchr-ppc32 memrchr-power7 memrchr-ppc32 rawmemchr-power7 \
 		   rawmemchr-ppc32 strnlen-power7 strlen-power7 strlen-ppc32 \
-		   strnlen-power7 strnlen-ppc32
+		   strnlen-power7 strnlen-ppc32  strncmp-power7 strncmp-power4 \
+		   strncmp-ppc32
 endif
