--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -6,5 +6,5 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memchr-ppc32 memrchr-power7 memrchr-ppc32 rawmemchr-power7 \
 		   rawmemchr-ppc32 strnlen-power7 strlen-power7 strlen-ppc32 \
 		   strnlen-power7 strnlen-ppc32  strncmp-power7 strncmp-power4 \
-		   strncmp-ppc32
+		   strncmp-ppc32 strcasecmp-power7 strcasecmp_l-power7
 endif
