--- a/sysdeps/powerpc/powerpc32/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/multiarch/Makefile
@@ -7,7 +7,8 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   rawmemchr-ppc32 strnlen-power7 strlen-power7 strlen-ppc32 \
 		   strnlen-power7 strnlen-ppc32  strncmp-power7 strncmp-power4 \
 		   strncmp-ppc32 strcasecmp-power7 strcasecmp_l-power7 \
-		   strncase-power7 strncase_l-power7
+		   strncase-power7 strncase_l-power7 strchrnul-power7 \
+		   strchrnul-ppc32
 
 CFLAGS-strncase-power7.c += -mcpu=power7 -funroll-loops
 CFLAGS-strncase_l-power7.c += -mcpu=power7 -funroll-loops
