PowerPC: strchr multilib for PowerPC64

--- a/sysdeps/powerpc/powerpc64/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc64/multiarch/Makefile
@@ -8,7 +8,7 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   strlen-ppc64 strnlen-power7 strnlen-ppc64 \
 		   strcasecmp-power7 strcasecmp_l-power7 \
 		   strncase-power7 strncase_l-power7 strncmp-power7 \
-		   strncmp-power4 strncmp-ppc64
+		   strncmp-power4 strncmp-ppc64 strchr-power7 strchr-ppc64
 
 # Refrain GCC to create recursive calls
 CFLAGS-rtld-memset.c += -fno-tree-loop-distribute-patterns
