--- a/releng/nsswitch.conf
+++ b/releng/nsswitch.conf
@@ -29,11 +29,11 @@
 #passwd:    db files nisplus nis
 #shadow:    db files nisplus nis
 #group:     db files nisplus nis
-#initgroups: db [SUCCESS=continue] files nisplus nis
 
-passwd:     files
-shadow:     files
-group:      files
+passwd:     files sss
+shadow:     files sss
+group:      files sss
+initgroups: files
 
 #hosts:     db files nisplus nis dns
 hosts:      files dns
@@ -53,9 +53,9 @@ netmasks:   files
 networks:   files
 protocols:  files
 rpc:        files
-services:   files
+services:   files sss
 
-netgroup:   nisplus
+netgroup:   nisplus sss
 
 publickey:  nisplus
 
